Quick button overflow fix

--- a/style.css
+++ b/style.css
@@ -91,7 +91,7 @@ html, body {
     /* background-color: grey; */
     width: 100%;
     height: 55%;
-    padding-top: 5%;
+    padding-top: 3.5%;
 }
 
 #hero-content-top h3 {
@@ -123,13 +123,13 @@ html, body {
     position: relative;
     left: 50%;
     transform: translateX(-50%);
-    margin-top: 30px;
+    margin-top: 2%;
     background-color: black;
     color: white;
     font-size: 1em;
     font-weight: 500;
     padding: 15px 25px;
-    border-radius: 100px;
+    border-radius: 25px;
 }
 
 /* ! ======== hero bottom ======== */
